[package]
name = "learning_ash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.37", features = ["linked"]}
winit = "0.27"

vk-shader-macros = "0.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
